# learning

./: .gitignore  README.md  goals.md  pyproject.toml
src/learning/: utils.py
src/learning/cs336/assignment1-basics/cs336_basics/: tokenizer.py
src/learning/interview_prep/test3/: debug_pytorch.py  debug_pytorch_fixed.py
src/learning/interview_prep/test4/: README.md  SOLUTIONS.md  part1_attention.py  part2_sampling.py  part3_optim.py
src/learning/interview_prep/test4/tests/: _harness.py  grade_part1.py  grade_part2.py  grade_part3.py
src/learning/interview_prep/test5/: README.md  SOLUTIONS.md  challenge.py  test_challenge.py
src/learning/kernels/: rms_norm.py
src/learning/models/: llm.py  qwen3.py  vit.py  vlm.py
src/learning/tokenization/: tokenization.py
src/learning/transformer/: jax_arch.py  torch_arch.py  torch_models.py
