[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "learning"
description = "learning"
readme = "README.md"
#license = { text = "BUSL-1.1" }
version = "0.1.0"
authors = [{ name = "Allan Zhang", email = "allanzhang@ucla.edu" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "datasets>=2.15",
]
